--- a/.github/workflows/sample-workflow.yml
+++ b/.github/workflows/sample-workflow.yml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Simulate deployment
-        run: echo "Deploying to Production..."
+        run: echo "Deploying to production..."
