--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -6,9 +6,6 @@ on:
       app-name:
         required: true
         type: string
-      environment:
-        required: false
-        type: string
 
 jobs:
   validate:
@@ -29,7 +26,7 @@ jobs:
       - name: Determine approver
         id: approver
         run: |
-          # Map app-name to approver secret (GitHub usernames)
+          # Map app-name to approver GitHub username
           if [ "${{ inputs.app-name }}" == "app-1" ]; then
             echo "approver=${{ secrets.TEST_APPROVER_1 }}" >> $GITHUB_OUTPUT
           elif [ "${{ inputs.app-name }}" == "app-2" ]; then
@@ -43,11 +40,11 @@ jobs:
         with:
           approvers: ${{ steps.approver.outputs.approver }}
           minimum-approvals: 1
-          secret: manual-approval-token          # just a string to track approval
+          secret: "manual-approval-token"
           issue-title: "Approval required for ${{ inputs.app-name }}"
           issue-body: "Please approve this workflow to continue testing."
         env:
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}   # <- your PAT here
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
   build:
     runs-on: ubuntu-latest
@@ -61,7 +58,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment: ${{ inputs.environment }}
     steps:
       - name: Deploy step (simulated)
-        run: echo "Deploying ${{ inputs.app-name }} to ${{ inputs.environment || 'no environment specified' }}"
+        run: echo "Deploying ${{ inputs.app-name }}..."
