--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Await approval
         uses: trstringer/manual-approval@v1
         with:
-          approvers: ${{ steps.approver.outputs.approver }}
+          approvers: KrishnaPisupati05
           minimum-approvals: 1
           secret: "manual-approval-token"
           issue-title: "Approval required for ${{ inputs.app-name }}"
