--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -13,10 +13,11 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+
       - name: Validate app
         run: |
-          echo "Validating ${{ inputs.app-name }}"
-          echo "Running basic tests..."
+          echo "Validating ${{ inputs['app-name'] }}"
+          echo "Running basic tests... (simulated)"
           echo "npm install && npm test (simulated)"
 
   await-approval:
@@ -26,24 +27,22 @@ jobs:
       - name: Determine approver
         id: approver
         run: |
-          # Map app-name to approver GitHub username
-          if [ "${{ inputs.app-name }}" == "app-1" ]; then
-            echo "approver=${{ secrets.TEST_APPROVER_1 }}" >> $GITHUB_OUTPUT
-          elif [ "${{ inputs.app-name }}" == "app-2" ]; then
-            echo "approver=${{ secrets.TEST_APPROVER_2 }}" >> $GITHUB_OUTPUT
+          if [ "${{ inputs['app-name'] }}" == "app-1" ]; then
+            echo "approver=KrishnaPisupati05" >> $GITHUB_OUTPUT
+          elif [ "${{ inputs['app-name'] }}" == "app-2" ]; then
+            echo "approver=AnotherApprover" >> $GITHUB_OUTPUT
           else
-            echo "approver=${{ secrets.DEFAULT_APPROVER }}" >> $GITHUB_OUTPUT
+            echo "approver=DefaultApprover" >> $GITHUB_OUTPUT
           fi
 
       - name: Await approval
         uses: trstringer/manual-approval@v1
         with:
-          approvers: KrishnaPisupati05
+          approvers: ${{ steps.approver.outputs.approver }}
           minimum-approvals: 1
           secret: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          issue-title: "Approval required for ${{ inputs.app-name }}"
+          issue-title: "Approval required for ${{ inputs['app-name'] }}"
           issue-body: "Please approve this workflow to continue testing."
-
 
   build:
     runs-on: ubuntu-latest
@@ -51,12 +50,12 @@ jobs:
     steps:
       - name: Build app
         run: |
-          echo "Building ${{ inputs.app-name }}..."
-          echo "npm run build (simulated)"
+          echo "Building ${{ inputs['app-name'] }}... (simulated)"
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy step (simulated)
-        run: echo "Deploying ${{ inputs.app-name }}..."
+      - name: Deploy app
+        run: |
+          echo "Deploying ${{ inputs['app-name'] }}... (simulated)"
