--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Validate app
         run: |
           echo "Validating ${{ inputs['app-name'] }}"
-          echo "Running basic tests... (simulated)"
+          echo "Running basic tests..."
           echo "npm install && npm test (simulated)"
 
   await-approval:
@@ -27,20 +27,20 @@ jobs:
       - name: Determine approver
         id: approver
         run: |
+          # Map app-name to approver GitHub username (plain username)
           if [ "${{ inputs['app-name'] }}" == "app-1" ]; then
             echo "approver=KrishnaPisupati05" >> $GITHUB_OUTPUT
           elif [ "${{ inputs['app-name'] }}" == "app-2" ]; then
-            echo "approver=AnotherApprover" >> $GITHUB_OUTPUT
+            echo "approver=AnotherUser" >> $GITHUB_OUTPUT
           else
-            echo "approver=DefaultApprover" >> $GITHUB_OUTPUT
-          fi
+            echo "approver=DefaultUser" >> $GITHUB_OUTPUT
 
       - name: Await approval
         uses: trstringer/manual-approval@v1
         with:
           approvers: ${{ steps.approver.outputs.approver }}
           minimum-approvals: 1
-          secret: ${{ secrets.GITHUB_TOKEN }}
+          secret: ${{ secrets.GITHUB_TOKEN }}   # built-in token works for same repo
           issue-title: "Approval required for ${{ inputs['app-name'] }}"
           issue-body: "Please approve this workflow to continue testing."
 
@@ -50,12 +50,12 @@ jobs:
     steps:
       - name: Build app
         run: |
-          echo "Building ${{ inputs['app-name'] }}... (simulated)"
+          echo "Building ${{ inputs['app-name'] }}..."
+          echo "npm run build (simulated)"
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy app
-        run: |
-          echo "Deploying ${{ inputs['app-name'] }}... (simulated)"
+      - name: Deploy step (simulated)
+        run: echo "Deploying ${{ inputs['app-name'] }}..."
