--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -6,6 +6,9 @@ on:
       app-name:
         required: true
         type: string
+      environment:
+        required: false
+        type: string  
 
 jobs:
   validate:
@@ -57,6 +60,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    environment: ${{ inputs.environment }}
     steps:
       - name: Deploy step (simulated)
         run: echo "Deploying ${{ inputs['app-name'] }}..."
