--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -1,66 +1,73 @@
-name: Reusable SWA Test Workflow
+name: Validate, Build & Deploy Static Web App
 
 on:
   workflow_call:
     inputs:
-      app-name:
-        required: true
-        type: string
-      environment:
+      # Optional: app name, required only for production deployment
+      app_name:
         required: false
-        type: string  
+        type: string
 
 jobs:
   validate:
+    name: Validate
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Echo validation
+        run: |
+          echo "Validating application..."
+          echo "Simulated: npm install, lint, test"
+
+  build-and-deploy:
+    name: Build & Deploy
+    needs: validate
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Validate app
+      - name: Set deployment slot
+        id: slot
         run: |
-          echo "Validating ${{ inputs['app-name'] }}"
-          echo "Running basic tests..."
-          echo "npm install && npm test (simulated)"
-
-  await-approval:
-    runs-on: ubuntu-latest
-    needs: validate
-    steps:
-      - name: Determine approver
-        id: approver
-        run: |
-          # Map app-name to approver GitHub username (plain username)
-          if [ "${{ inputs['app-name'] }}" == "app-1" ]; then
-            echo "approver=KrishnaPisupati05" >> $GITHUB_OUTPUT
-          elif [ "${{ inputs['app-name'] }}" == "app-2" ]; then
-            echo "approver=AnotherUser" >> $GITHUB_OUTPUT
+          if [[ "${GITHUB_REF}" == "refs/heads/main" ]] || \
+             [[ "${GITHUB_REF}" == "refs/heads/master" ]] || \
+             [[ "${GITHUB_REF}" == "refs/heads/production" ]] || \
+             [[ "${GITHUB_EVENT_NAME}" == "workflow_dispatch" ]]; then
+            echo "slot=production" >> $GITHUB_OUTPUT
+            echo "protected=true" >> $GITHUB_OUTPUT
+          elif [[ "${GITHUB_REF}" == "refs/heads/staging" ]]; then
+            echo "slot=staging" >> $GITHUB_OUTPUT
+            echo "protected=false" >> $GITHUB_OUTPUT
           else
-            echo "approver=DefaultUser" >> $GITHUB_OUTPUT
-          fi
+            echo "slot=dev" >> $GITHUB_OUTPUT
+            echo "protected=false" >> $GITHUB_OUTPUT
 
-      - name: Await approval
-        uses: trstringer/manual-approval@v1
-        with:
-          approvers: ${{ steps.approver.outputs.approver }}
-          minimum-approvals: 1
-          secret: ${{ secrets.GITHUB_TOKEN }}   # built-in token works for same repo
-          issue-title: "Approval required for ${{ inputs['app-name'] }}"
-          issue-body: "Please approve this workflow to continue testing."
-
-  build:
-    runs-on: ubuntu-latest
-    needs: await-approval
-    steps:
-      - name: Build app
+      - name: Preview Deployment Slot
         run: |
-          echo "Building ${{ inputs['app-name'] }}..."
-          echo "npm run build (simulated)"
+          echo "----------------------------------------"
+          echo "Branch: ${GITHUB_REF##*/}"
+          echo "Event: ${GITHUB_EVENT_NAME}"
+          echo "Deployment slot: ${{ steps.slot.outputs.slot }}"
+          if [[ "${{ steps.slot.outputs.protected }}" == "true" ]]; then
+            echo "⚠️ Production deployment: approval required!"
+          else
+            echo "✅ Deployment will proceed automatically (no approval required)."
+          fi
+          echo "----------------------------------------"
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment: ${{ inputs.environment }}
-    steps:
-      - name: Deploy step (simulated)
-        run: echo "Deploying ${{ inputs['app-name'] }}..."
+      - name: Approval for production
+        if: steps.slot.outputs.protected == 'true'
+        environment: ${{ inputs.app_name }}-prod
+        run: echo "Approval received. Proceeding with production deployment..."
+
+      - name: Build App
+        run: |
+          echo "Building app for slot ${{ steps.slot.outputs.slot }}..."
+          echo "Simulated: npm run build"
+
+      - name: Deploy App
+        run: |
+          echo "Deploying app to slot ${{ steps.slot.outputs.slot }}..."
+          echo "Simulated: Azure Static Web Apps deploy"
