--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -1,17 +1,19 @@
-name: Deploy App1
+name: Test Static Web App Deployment
 
 on:
-  push:
-    branches:
-      - main
-      - master
-      - staging
-      - dev
   workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to test'
+        required: true
+        default: dev
 
 jobs:
-  deploy:
-    uses: flysastech/reusable-workflows/.github/workflows/deploy.yml@main
+  call-reusable:
+    uses: .github/workflows/reusable-workflow.yml
     with:
-      # Optional: only needed for production approval
-      # app_name: myapp
+      app-name: app1
+      environment: app1-test  # Environment configured with approvers
+      working-directory: ./dummy
+      app-location: dummy-app
+      output-location: dummy-build
