--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -1,19 +1,11 @@
-name: Test Static Web App Deployment
+name: Test Deploy
 
 on:
   workflow_dispatch:
-    inputs:
-      branch:
-        description: 'Branch to test'
-        required: true
-        default: dev
 
 jobs:
   call-reusable:
-    uses: ./.github/workflows/reusable-workflow.yml
+    uses: ./.github/workflows/reusable-workflow.yml@main
     with:
       app-name: app1
-      environment: app1-test  # Environment configured with approvers
-      working-directory: ./dummy
-      app-location: dummy-app
-      output-location: dummy-build
+      environment: app1-test
