--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -72,7 +72,7 @@ jobs:
             echo "slot=staging" >> $GITHUB_OUTPUT
 
       - name: Echo Slot Name
-        run: echo 'Deploying ${{ inputs.app-name }} to slot: ${{ steps.slot.outputs.slot }}''
+        run: echo 'Deploying ${{ inputs.app-name }} to slot: ${{ steps.slot.outputs.slot }}'
 
       - name: Deploy to Azure Static Web App
         uses: Azure/static-web-apps-deploy@v1
