Updated workflow code

--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -10,5 +10,5 @@ jobs:
       app-name: app1
       environment: app1-test   # Approval environment set in GitHub
       node-version: 18.x
-      app-location: frontend
+      app-location: app1/frontend
       output-location: build
