--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -12,5 +12,6 @@ jobs:
       node-version: 18.x
       app-location: app1/frontend
       output-location: build
+      #skip_app_build: true
 
     secrets: inherit
